# bladerf_tool

./: README.md
backend/: CMakeLists.txt
backend/include/: spectrum_analyzer.h
backend/src/: spectrum_analyzer.c
frontend/: requirements.txt  spectrum_analyzer_ui.py
